# Test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quality-gates.yml
docs/: ai_code_quality_playbook.md  code_review_report.md  logging_error_code_min_spec.md  personal_live_go_no_go_checklist.md  restart_takeover_runbook.md  scalping_crypto_strategy.md
quantx/: abtest.py  alerts.py  analytics.py  attribution.py  audit.py  backtest.py  bootstrap.py  cli.py  config_validation.py  credentials.py  cta_optimize.py  data.py  data_quality.py  error_codes.py  exchange.py  exchange_rules.py  execution.py  indicator_cache.py  live_margin_allocator.py  live_market_driver.py  live_pipeline.py  live_runtime.py  live_runtime_store.py  live_service.py  live_strategy_runner.py  live_supervisor.py  live_watchdog.py  meta_portfolio.py  micro_backtest.py  ml_adapter.py  models.py  monitoring.py  oms.py  optimize.py  paper_harness.py  portfolio_opt.py  radar.py  readiness.py  rebalance.py  release_gates.py  (+7 more)
quantx/configs/: cta_strategy_stable.yaml  scalping_crypto.yaml
src/: TestSort.java
tests/: conftest.py  test_bootstrap.py  test_config_validation.py  test_credentials.py  test_cta_optimize.py  test_exchange_clients.py  test_live_margin_allocator.py  test_live_market_driver.py  test_live_readiness.py  test_live_runtime.py  test_live_strategy_runner.py  test_live_supervisor.py  test_live_watchdog.py  test_okx_perp_client.py  test_paper_harness.py  test_performance_smoke.py  test_quantx.py  test_quantx_system_modules.py  test_release_gates.py  test_replay.py
(+62 files in other folders)
