[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantx"
version = "0.1.0"
description = "Quant trading system for crypto exchanges"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
quantx = "quantx.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["quantx*"]
exclude = ["tests*", "src*"]


[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-cov>=7",
    "ruff>=0.8",
    "mypy>=1.10",
    "bandit>=1.7.9",
    "pip-audit>=2.7.3",
    "types-PyYAML>=6.0",
]


[tool.pytest.ini_options]
addopts = "--cov=quantx --cov-report=term-missing --cov-fail-under=60 -q"
pythonpath = ["."]


[tool.coverage.run]
branch = true
source = ["quantx"]


[tool.coverage.report]
show_missing = true
skip_covered = false
